# config_file_handler

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html
0.1.0/rustc_serialize/json/: struct.Parser.html
0.1.0/src/config_file_handler/: lib.rs.html
0.2.0/: search-index.js
0.2.0/config_file_handler/: fn.system_cache_dir.html
0.2.0/rustc_serialize/json/: struct.Parser.html
0.2.0/src/config_file_handler/: file_handler.rs.html
0.3.0/: search-index.js
0.3.0/src/config_file_handler/: error.rs.html  file_handler.rs.html  lib.rs.html
0.3.1(#22)/config_file_handler/: fn.cleanup.html  fn.exe_file_stem.html  fn.system_cache_dir.html  fn.user_app_dir.html  index.html  struct.FileHandler.html
0.3.1(#22)/rustc_serialize/json/: struct.Parser.html
latest/: search-index.js
latest/config_file_handler/: fn.current_bin_dir.html  fn.exe_file_stem.html  fn.system_cache_dir.html  fn.user_app_dir.html  index.html  struct.ScopedUserAppDirRemover.html
master/: index.html  search-index.js
master/cbor/: struct.DecodedItems.html  struct.Items.html
master/config_file_handler/: enum.Error.html  fn.cleanup.html  fn.current_bin_dir.html  fn.exe_file_stem.html  fn.system_cache_dir.html  fn.user_app_dir.html  index.html  sidebar-items.js  struct.FileHandler.html  struct.ScopedUserAppDirRemover.html
master/config_file_handler/error/: enum.Error.html  index.html
master/config_file_handler/file_handler/: fn.current_bin_dir.html  fn.exe_file_stem.html  fn.system_cache_dir.html  fn.user_app_dir.html  index.html  sidebar-items.js  struct.FileHandler.html  (+1 more)
src/: config_handler.rs  endpoint.rs  error.rs  file_handler.rs  global_mutex.rs  lib.rs  socket_addr.rs
(+41 files in other folders)
