[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Create, read and write JSON-encoded config files."
documentation = "https://docs.rs/config_file_handler"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "config_file_handler"
readme = "README.md"
repository = "https://github.com/maidsafe/config_file_handler"
version = "0.8.3"

[dependencies]
fs2 = "~0.4.2"
lazy_static = "~0.2.8"
quick-error = "~1.2.0"
serde = "~1.0.11"
serde_json = "~1.0.2"
unwrap = "~1.1.0"
