[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Create, read and write JSON-encoded config files."
documentation = "https://docs.rs/config_file_handler"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "config_file_handler"
readme = "README.md"
repository = "https://github.com/maidsafe/config_file_handler"
version = "0.11.0"
edition = "2018"

[dependencies]
fs2 = "~0.4.2"
lazy_static = "~0.2.8"
quick-error = "~1.2.0"
serde = "~1.0.27"
serde_json = "~1.0.9"
unwrap = "~1.2.1"
dirs = "~1.0.4"
